test/files/pos/t1102/J.java
class J {
	enum E { E1 }
	void foo(E e) { }
}
