test/files/neg/t1211c/I.java

interface I {
	enum E { E1 }
}
